k8s/unused/soulseek/custom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soulseek-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: soulseek.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soulseek
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: soulseek
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: soulseek
spec:
  selector:
    app: soulseek
  type: LoadBalancer
  loadBalancerIP: 192.168.1.251
  ports:
    - name: http
      port: 6080
      targetPort: 6080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soulseek
  namespace: default
  labels:
    app: soulseek
spec:
  selector:
    matchLabels:
      app: soulseek
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: soulseek
    spec:
      containers:
        - name: soulseek
          image: realies/soulseek:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            # soulseek_vnc
            - containerPort: 6080
            # Listening port
            - containerPort: 57913
            # Obfuscated port
            - containerPort: 57914
          volumeMounts:
            - name: downloads
              mountPath: "/data"
              subPath: config/soulseek
            - name: downloads
              mountPath: "/data/downloads"
              subPath: soulseek/downloads
            - name: downloads
              mountPath: "/data/shared"
              subPath: soulseek/shared
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
